# local-ai-platform

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_HANDOFF.md  CLAUDE.md  LICENSE  README.md  check_fixes.py  compose.yaml  memory.md  pyproject.toml  repo-files.txt
.github/workflows/: ci.yml
apps/gateway/: Dockerfile  __init__.py  main.py  middleware.py  pyproject.toml
apps/gateway/api/: __init__.py  chat.py  health.py  models.py  version.py
apps/gateway/core/: __init__.py  config.py  logging.py
benchmarks/debug/: expected.json
benchmarks/explain/: expected.json
benchmarks/implement/: expected.json
docs/: STATUS.md  advisors-refactoring.md  architecture-review.md  architecture.md  autonomous-engineering.md  bench_context_result.txt  benchmark-framework.md  bootstrap.md  bug-investigation.md  capabilities.md  change-impact.md  code-modification-engine.md  context-builder.md  context-package.md  context-planning.md  controller.md  engineering  engineering-controller-flow.mmd  engineering-controller-v2.md  engineering-session.md  evaluation-framework.md  execution-engine.md  execution-planner.md  index.md  integration-milestone-v1.md  observability.md  patch-generator.md  planner-rules.md  planning-v2.md  platform-validation.md  pull-request-review.md  ranking-v2.md  relationship-extraction.md  relationship-ranking.md  repository-diagnostics.md  scoring-rules.md  self-verification.md  serialization.md  symbol-graph.md  tasks.md  (+2 more)
scripts/: README.md  bench_context.py  bench_multiturn.py  test_gateway.py
tests/: __init__.py  conftest.py  debug_context.py  engine  engineering
tests/advisors/: __init__.py
tests/architecture/: __init__.py  test_analyzer.py
tests/autonomous/: __init__.py  test_engine.py  test_models.py  test_policy.py  test_registry.py  test_state.py  test_stopping.py
tests/benchmark/: test_engine.py  test_metrics.py  test_runner.py
(+189 files in other folders)
