[project]
name = "local-ai-platform-gateway"
version = "0.1.0"
description = "FastAPI gateway application for Local AI Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
